remove EJBQL queries